# peruse-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
assets/: peruse_ai_flowchart_compact_mono.html  ux_review_ChatOllama_20260303_165425.md
opencode-skill/: SKILL.md  install.sh
src/peruse_ai/: __init__.py  agent.py  cli.py  config.py  vlm.py
